Use Deque for taptimestamps, try to solve thread bug